# speed-rs-ctl

./: Cargo.toml  README.md  build.rs  diagram.json  wokwi.toml
.cargo/: config.toml
src/: lib.rs  wifi.rs
ui/: counter.slint
