[package]
edition      = "2024"
name         = "speed"
rust-version = "1.88"
version      = "0.2.2"
autobins     = false

[[bin]]
name = "speed"
path = "./src/bin/main.rs"
required-features = ["esp"]

[[bin]]
name = "tft"
path = "./src/bin/tft.rs"
required-features = ["esp"]

[[bin]]
name = "wokwi_tft"
path = "./src/bin/wokwi_tft.rs"
required-features = ["esp"]

[[bin]]
name = "slint_tft"
path = "./src/bin/slint_tft.rs"
required-features = ["esp", "slint-mcu"]

[[bin]]
name = "web_gui"
path = "./src/bin/web_gui.rs"
required-features = ["web_gui"]

[features]
default = []
slint-mcu = [
  "dep:slint",
  "dep:slint-build",
  "slint/compat-1-2",
  "slint/unsafe-single-threaded",
  "slint/libm",
  "slint/renderer-software",
]
esp = [
  "dep:esp-hal",
  "dep:esp-rtos",
  "dep:esp-bootloader-esp-idf",
  "dep:embassy-net",
  "dep:embassy-futures",
  "dep:embassy-sync",
  "dep:embedded-hal",
  "dep:embedded-io",
  "dep:embedded-io-async",
  "dep:esp-alloc",
  "dep:esp-println",
  "dep:esp-backtrace",
  "dep:bt-hci",
  "dep:embassy-executor",
  "dep:embassy-time",
  "dep:esp-radio",
  "dep:smoltcp",
  "dep:trouble-host",
  "dep:critical-section",
  "dep:static_cell",
  "dep:embedded-graphics",
  "dep:embedded-hal-bus",
  "dep:mipidsi",
  "dep:serde",
  "dep:serde_json",
]

web_gui = [
  "dep:iced",
  "dep:warp",
  "dep:tokio",
  "dep:serde",
  "dep:serde_json",
]

[dependencies]
log = "0.4.29"

embedded-hal = { version = "1.0.0", optional = true }

slint = { version = "1.14.1", default-features = false, optional = true }

esp-hal = { version = "~1.0.0", optional = true, features = ["esp32s3", "log-04", "psram", "unstable"] }

esp-rtos = { version = "0.2.0", optional = true, features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", optional = true, features = ["esp32s3", "log-04"] }

embassy-net = { version = "0.7.1", optional = true, features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", optional = true }
embedded-io-async = { version = "0.6.1", optional = true }
esp-alloc = { version = "0.9.0", optional = true }
esp-println = { version = "0.16.1", optional = true, features = ["esp32s3", "log-04"] }
esp-backtrace = { version = "0.18.1", optional = true, features = ["esp32s3", "panic-handler", "println"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = { version = "0.6.0", optional = true }
embassy-executor = { version = "0.9.1", optional = true, features = ["log"] }
embassy-futures = { version = "0.1.2", optional = true }
embassy-sync = { version = "0.7.2", optional = true }
embassy-time = { version = "0.5.0", optional = true, features = ["log"] }
esp-radio = { version = "0.17.0", optional = true, features = [
  "ble",
  "coex",
  "esp-alloc",
  "esp32s3",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", optional = true, default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.5.1", optional = true, features = ["gatt"] }

critical-section = { version = "1.2.0", optional = true }
static_cell      = { version = "2.1.1", optional = true }

# Display (Adafruit ESP32-S3 TFT Feather / ST7789)
embedded-graphics = { version = "0.8.1", optional = true }
embedded-hal-bus = { version = "0.3.0", optional = true }
mipidsi = { version = "0.9.0", optional = true }

serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json = { version = "1.0.148", default-features = false, features = ["alloc"], optional = true }

iced = { version = "0.14.0", optional = true, features = ["tokio"] }
warp = { version = "0.4.2", optional = true, features = ["server"] }
tokio = { version = "1.48.0", features = ["full"], optional = true }


[build-dependencies]
slint-build = { version = "1.14.1", optional = true }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
